--- a/shop123/Web.config
+++ b/shop123/Web.config
@@ -72,9 +72,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings>
-    <add name="shop123Entities" connectionString="metadata=res://*/Models.shop123.csdl|res://*/Models.shop123.ssdl|res://*/Models.shop123.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=shop123;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="shop123Entities" connectionString="metadata=res://*/Models.shop123.csdl|res://*/Models.shop123.ssdl|res://*/Models.shop123.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=fuen12202.database.windows.net;initial catalog=shop123;persist security info=True;user id=fuen12202;password=P@ssw0rd-iii;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="shop123Entities1" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=fuen12202.database.windows.net;initial catalog=shop123;persist security info=True;user id=fuen12202;password=P@ssw0rd-iii;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
